Understand common concepts in Rust

--- a/markdown/02.common_concepts.md
+++ b/markdown/02.common_concepts.md
@@ -1,6 +1,17 @@
 # Common Concepts
 
+## main function
+
+```rs
+fn main() {
+    println!("Hello, World!");
+    println!("The first letter of the English alphabet is {} and the last letter is {}.", 'A', 'Z');
+}
+```
+
 ## variables
+
+Data is gathered, analyzed, stored, processed, shared, and reported.
 
 1. `let` defines immutable variables
 2. `let mut` defines mutable variables
@@ -92,6 +103,19 @@ assert_eq!(tuple.2, 'c');
 println!("{}", tuple.0);  // prints "hello"
 ```
 
+## if/else
+
+```rs
+if 1 == 2 {
+    println!("True, equal");
+} else {
+    println!("False, not equal");
+}
+let a = if b {
+}
+println!("{}", a);
+```
+
 ## structs and enums
 
 Structs in Rust come in three flavors: classic structs, tuple structs, and unit structs.
@@ -126,9 +150,9 @@ fn main() {
 
     // Display the details of the person
     if person.likes_oranges {
-        println!("{:?} is {:?} and likes oranges.", person.name, person.age);  
+        println!("{:?} is {:?} and likes oranges.", person.name, person.age);
     } else {
-        println!("{:?} is {:?} and doesn't like oranges.", person.name, person.age);  
+        println!("{:?} is {:?} and doesn't like oranges.", person.name, person.age);
     }
 }
 ```
@@ -148,4 +172,121 @@ enum WebEvent {
     // Or it can include tuple structs
     Click{x: i64, y: i64}
 }
+// instantiate an enum
+let we_load = WebEvent::PageLoad;
 ```
+
+## functions
+
+```rs
+fn is_zero(input: u8) -> bool {
+    if input == 0 {
+        return true;
+    }
+    // final value as return value
+    false;
+}
+```
+
+## collections
+
+### array
+
+At compile time, the signature of an array is defined as `[T; size]`;
+
+- `T` is the data type for all elements in the array
+- `size` is a non-negative integer that represents the array length
+
+```rs
+// Declare array, initialize all values, compiler infers length = 7
+let days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+
+// Declare array, first value = "0", length = 5
+let bytes = [0; 5];
+```
+
+- Every element of an array has the same data type. The data type never changes.
+- The size of an array is fixed. The length never changes.
+
+### vector
+
+```rs
+// Declare vector, initialize with three values
+let three_nums = vec![15, 3, 46];
+println!("Initial vector: {:?}", three_nums);
+
+// Declare vector, first value = "0", length = 5
+let zeroes = vec![0; 5];
+println!("Zeroes: {:?}", zeroes);
+
+// Create empty vector, declare vector mutable so it can grow and shrink
+let mut fruit = Vec::new();
+// Push values onto end of vector, type changes from generic `T` to String
+fruit.push("Apple");
+fruit.push("Banana");
+fruit.push("Cherry");
+// use this format to represent collection
+println!("Fruits: {:?}", fruit);
+```
+
+### hashmap
+
+```rs
+use std::collections::HashMap;
+let mut reviews: HashMap<String, String> = HashMap::new();
+
+reviews.insert("Ancient Roman History".to_string(), "Very accurate.".to_string());
+reviews.insert("Cooking with Rhubarb".to_string(), "Sweet recipes.".to_string());
+reviews.insert("Programming in Rust".to_string(), "Great examples.".to_string());
+```
+
+## iterate
+
+- loop: Repeat, unless a manual stop occurs.
+- while: Repeat while a condition remains true.
+- for: Repeat for all values in a collection.
+
+```rs
+loop {
+    println!("forever loop");
+    // break;
+}
+
+let mut counter = 1;
+// stop_loop is set when loop stops
+let stop_loop = loop {
+    counter *= 2;
+    if counter > 100 {
+        // Stop loop, return counter value
+        break counter;
+    }
+};
+// Loop should break when counter = 128
+println!("Break the loop at counter = {}.", stop_loop);
+
+// use while
+while counter < 5 {
+    println!("We loop a while...");
+    counter = counter + 1;
+}
+
+// use for
+let big_birds = ["ostrich", "peacock", "stork"];
+for bird in big_birds.iter() {
+    println!("The {} is a big bird.", bird);
+}
+
+for n in 0..5 {
+    println!("{}", n * 2);
+}
+```
+
+## summary
+
+- The `main` function is the entry point into any Rust program.
+- The `let` keyword declares a variable. You can create a variable as mutable or immutable.
+- The Rust standard library supports primitive data types like integers, strings, booleans, and so on.
+- How to declare your own types with structs and enums.
+- How to write your own functions.
+- How to use the tuple, array, vector, and hash map collection types.
+- How to control the flow of code execution with loops and conditional statements.
