--- a/markdown/01.first-step.md
+++ b/markdown/01.first-step.md
@@ -26,3 +26,23 @@ While the rustc compiler is fine for simple programs, almost no projects use the
 - Check project types with the `cargo check` command.
 - Build documentation for a project with the `cargo doc` command.
 - Publish a library to crates.io with the `cargo publish` command.
+
+## Rust Modules
+
+- crates
+- modules
+- paths
+
+## Rust crates and libraries
+
+- std
+  - std::collections
+  - std::env
+  - std::fmt
+  - std::fs
+  - std::io
+  - std::path
+- structopt
+- chrono
+- regex
+- serde
