--- a/learning/markdown/01.first_step.md
+++ b/learning/markdown/01.first_step.md
@@ -7,7 +7,7 @@ These features reduce the hassle traditionally associated with low-level languag
 ## Advantages
 
 - **Type safe:** The compiler assures that no operation will be applied to a variable of a wrong type.
-- **Memory safe:** Rust pointers (known as *references*) always refer to valid memory.
+- **Memory safe:** Rust pointers (known as _references_) always refer to valid memory.
 - **Data race-free:** Rust's borrow checker guarantees thread-safety by ensuring that multiple parts of a program can't
   mutate the same value at the same time.
 - **Zero cost abstractions:** Rust allows the use of high-level concepts, like iteration, interfaces, and functional
@@ -44,12 +44,12 @@ use Rust's build tool and dependency manager, Cargo.
 ## Rust crates and libraries
 
 - std
-    - std::collections
-    - std::env
-    - std::fmt
-    - std::fs
-    - std::io
-    - std::path
+  - std::collections
+  - std::env
+  - std::fmt
+  - std::fs
+  - std::io
+  - std::path
 - structopt
 - chrono
 - regex
