--- a/learning/markdown/02.common_concepts.md
+++ b/learning/markdown/02.common_concepts.md
@@ -2,9 +2,10 @@
 
 ## main function
 
-```rs
+```rust
 fn main() {
     println!("Hello, World!");
+    // value replacer
     println!("The first letter of the English alphabet is {} and the last letter is {}.", 'A', 'Z');
 }
 ```
@@ -27,7 +28,7 @@ fn main() {
 
     // Error: cannot assign twice to immutable variable
     a_number = 15;
-    println!("Now the number is {}." , a_number);
+    println!("Now the number is {}.", a_number);
 
     let mut b_number = 10;
     b_number = 15; // OK
@@ -43,7 +44,9 @@ Rust is a statically typed language.
 
 i8 - u8, i16 - u16, i32 - u32, i64 - u64, i128 - u128, isize - usize | f32, f64
 
-The isize and usize types depend on the kind of computer your program is running on. The 64-bit type is used on a 64-bit architecture, and the 32-bit type on a 32-bit architecture. If you don't specify the type for an integer, and the system can't infer the type, it assigns the i32 type (a 32-bit signed integer) by default.
+The isize and usize types depend on the kind of computer your program is running on. The 64-bit type is used on a 64-bit
+architecture, and the 32-bit type on a 32-bit architecture. If you don't specify the type for an integer, and the system
+can't infer the type, it assigns the i32 type (a 32-bit signed integer) by default.
 
 ```rust
 let x = 2.0;      // f64, default type
@@ -63,14 +66,14 @@ println!("9 / 2 = {}", 9u32 / 2);
 println!("9 / 2 = {}", 9.0 / 2.0);
 
 // Multiplication
-println!("3 * 6 = {}", 3 * 6)
+println!("3 * 6 = {}", 3 * 6);
 ```
 
 ### Booleans
 
 true, false
 
-```rs
+```rust
 let is_bigger = 1 > 4;
 println!("{}", is_bigger);
 ```
@@ -81,7 +84,7 @@ Rust has two string types and one character type. All of them are valid UTF-8 re
 
 char, str, String
 
-```rs
+```rust
 let c = 'z';
 let c = 'Z';
 let heart_eyed_cat = '😻';
@@ -94,18 +97,19 @@ println!("{}", hello);
 
 ### Tuples
 
-```rs
-("Hello", 5i32, 'c');
-assert_eq!(tuple.0, "hello");
-assert_eq!(tuple.1, 5);
-assert_eq!(tuple.2, 'c');
+```rust
+let tuple_e = ("Hello", 5i32, 'c');
+// access elements in a tuple
+assert_eq!(tuple_e.0, "hello");
+assert_eq!(tuple_e.1, 5);
+assert_eq!(tuple_e.2, 'c');
 
-println!("{}", tuple.0);  // prints "hello"
+println!("{}", tuple_e.0);  // prints "hello"
 ```
 
 ## if/else
 
-```rs
+```rust
 if 1 == 2 {
     println!("True, equal");
 } else {
@@ -120,7 +124,7 @@ println!("{}", a);
 
 Structs in Rust come in three flavors: classic structs, tuple structs, and unit structs.
 
-```rs
+```rust
 // A struct with named fields
 struct Person {
     name: String,
@@ -157,9 +161,10 @@ fn main() {
 }
 ```
 
-The `enum` keyword allows the creation of a type, which might be one of a few different variants. Enum variants, just like structs, can have fields with names, fields without names, or no fields at all.
+The `enum` keyword allows the creation of a type, which might be one of a few different variants. Enum variants, just
+like structs, can have fields with names, fields without names, or no fields at all.
 
-```rs
+```rust
 enum WebEvent {
     // An enum can be unit-like
     PageLoad,
@@ -170,21 +175,45 @@ enum WebEvent {
     Paste(String),
 
     // Or it can include tuple structs
+    WEKeys(String, char),
+    // or classic struct
     Click{x: i64, y: i64}
 }
 // instantiate an enum
 let we_load = WebEvent::PageLoad;
+let z = WebEvent::KeyPress('z')
+
+struct MouseClick {
+    x: i64,
+    y: i64
+}
+
+let click = MouseClick {x: 100, y: 200};
+let we_click = WebEvent::Click(click);
 ```
 
 ## functions
 
-```rs
+```rust
+// return a value
 fn is_zero(input: u8) -> bool {
     if input == 0 {
         return true;
     }
     // final value as return value
     false;
+}
+
+// pass input arguments
+fn goodbye(message: &str) {
+    println!("\n{}", message);
+}
+
+fn main() {
+    let formal = "Formal: Good bye";
+    let casual = "Casual: See ya";
+    goodbye(formal);
+    goodbye(casual);
 }
 ```
 
@@ -197,7 +226,7 @@ At compile time, the signature of an array is defined as `[T; size]`;
 - `T` is the data type for all elements in the array
 - `size` is a non-negative integer that represents the array length
 
-```rs
+```rust
 // Declare array, initialize all values, compiler infers length = 7
 let days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
 
@@ -210,7 +239,7 @@ let bytes = [0; 5];
 
 ### vector
 
-```rs
+```rust
 // Declare vector, initialize with three values
 let three_nums = vec![15, 3, 46];
 println!("Initial vector: {:?}", three_nums);
@@ -231,7 +260,7 @@ println!("Fruits: {:?}", fruit);
 
 ### hashmap
 
-```rs
+```rust
 use std::collections::HashMap;
 let mut reviews: HashMap<String, String> = HashMap::new();
 
@@ -246,7 +275,7 @@ reviews.insert("Programming in Rust".to_string(), "Great examples.".to_string())
 - while: Repeat while a condition remains true.
 - for: Repeat for all values in a collection.
 
-```rs
+```rust
 loop {
     println!("forever loop");
     // break;
@@ -283,8 +312,8 @@ for n in 0..5 {
 
 ## summary
 
-- The `main` function is the entry point into any Rust program.
-- The `let` keyword declares a variable. You can create a variable as mutable or immutable.
+- The `main` function is the entry point into any Rust program.
+- The `let` keyword declares a variable. You can create a variable as mutable or immutable.
 - The Rust standard library supports primitive data types like integers, strings, booleans, and so on.
 - How to declare your own types with structs and enums.
 - How to write your own functions.
